--- a/.github/workflows/pypi_stats.yml
+++ b/.github/workflows/pypi_stats.yml
@@ -38,4 +38,4 @@ jobs:
           git config --local user.name "GitHub Action"
           git add downloads_stats.db
           git commit -m "Update PyPI download stats"
-          git push
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/ymansiaux/pystats.git HEAD:main
